--- a/dv/style/styles.css
+++ b/dv/style/styles.css
@@ -4,12 +4,12 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #f5f5f7;
+  background-color: #5c5c5f;
   font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 .calculator {
-  width: 320px;
+  width: 500px;
   background: #000;
   border-radius: 20px;
   padding: 20px;
@@ -30,7 +30,7 @@ body {
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
+  gap: 15px;
 }
 
 .button {
@@ -38,7 +38,7 @@ body {
   color: #fff;
   font-size: 1.5rem;
   border: none;
-  border-radius: 50%;
+  border-radius: 1000px;
   padding: 20px;
   display: flex;
   justify-content: center;
@@ -49,7 +49,14 @@ body {
 
 .button.wide {
   grid-column: span 2;
+  border-radius: 50x;
+}
+
+.button.wides {
+  grid-column: span 2;
   border-radius: 50px;
+  background-color: antiquewhite;
+  color: black;
 }
 
 .button.orange {
