--- a/dv/style/styles.css
+++ b/dv/style/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .calculator {
-  width: 500px;
+  width: 600px;
   background: #000;
   border-radius: 20px;
   padding: 20px;
@@ -36,7 +36,7 @@ body {
 .button {
   background: #333;
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 1rem;
   border: none;
   border-radius: 1000px;
   padding: 20px;
@@ -70,4 +70,45 @@ body {
 
 .button:active {
   transform: scale(0.9);
+}
+/* Bouton Science */
+#science-toggle {
+  background-color: #007bff;
+  color: #ffffff;
+  width: 100px;
+  height: 50px;
+  grid-column: span 2;
+}
+
+#science-toggle:hover {
+  background-color: #0056b3;
+}
+
+/* Boutons scientifiques */
+#science-buttons {
+  display: none;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  padding-top: 10px;
+}
+
+#science-buttons button {
+  background-color: #6c757d;
+  color: #ffffff;
+}
+
+#science-buttons button:hover {
+  background-color: #5a6268;
+}
+
+/* Responsive Design */
+@media (max-width: 400px) {
+  #calculator {
+      width: 100%;
+  }
+
+  button {
+      padding: 10px;
+      font-size: 0.9rem;
+  }
 }
